--- a/biochar.html
+++ b/biochar.html
@@ -2505,12 +2505,12 @@ limitations under the License.
                 recover faster from fire damage.</p>
                 <p class="mb1">
                 <h3>
-                Why This Matters for Global Warming</h3>
-                Let’s call it what it is: global warming. The heat is on, literally. Biochar offers a way to put carbon
+               Sequesters Carbon</h3>
+                Biochar offers a way to put carbon
                 back where it
                 belongs—in the ground, not in the atmosphere. When we sequester carbon using biochar, we’re not just
                 slowing the
-                problem; we’re actively reversing it.
+                problem; we’re actively reversing it. The carbon stays in the soil for over a hundred years.  Why are we sitting on this?  It's almost free to make, plus you can capture the hydrogen in plants (plants are like 20 percent hydrogen by weight).  
             </p>
             <p class="mb1">
                 <h3>Imagine this:</h3>
@@ -2523,14 +2523,14 @@ limitations under the License.
                 Taking a Stand: The Grown-Ups in the Room</h3>
                 For decades, oil companies, climate deniers, and profit-driven narratives have stalled meaningful
                 action. But let’s be
-                real: wildfires don’t care about politics, and neither does carbon in the atmosphere.
+                real: wildfires don’t care about politics, and neither does carbon in the atmosphere.  Let’s call it what it is: global warming. The heat is on, literally.
             </p>
                                         <a rel="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
                                             <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
             <p class="mb1">
                 It’s time for the grown-ups to step up. This isn’t about dreaming of oil profits or debating
                 terminology. It’s about
-                survival—and solutions that work.
+                survival—and solutions that work.  Oil companies and the media and politicians they own always campaign against anything eco science because it threatens their existence.  I say lets call a truce, me making biochar literally doesn't hurt your oil burning fantasies.  Do it, see if I care,  but don't @ me when I want to make biochar and not interfere with you.  Don't think I haven't noticed my comment section here on X over the last 15 years.  
             </p>
             <p class="mb1">
                 Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires. It’s
