--- a/biochar.html
+++ b/biochar.html
@@ -2530,9 +2530,11 @@ limitations under the License.
             <p class="mb1">
                 It’s time for the grown-ups to step up. This isn’t about dreaming of oil profits or debating
                 terminology. It’s about
-                survival—and solutions that work.  Oil companies and the media and politicians they own always campaign against anything eco science because it threatens their existence.  I say lets call a truce, me making biochar literally doesn't hurt your oil burning fantasies.  Do it, see if I care,  but don't @ me when I want to make biochar and not interfere with you.  Don't think I haven't noticed my comment section here on X over the last 15 years.  
+                survival—and solutions that work.  Oil companies and the media and politicians they own always campaign against anything eco science because it threatens their existence.  I say lets call a truce, me making biochar literally doesn't hurt your oil burning fantasies.  Do it, see if I care,  but don't @ me when I want to make biochar.  Leave biochar alone.  Don't think I haven't noticed my comment section here on X over the last 15 years.  
             </p>
-            <p class="mb1">
+            <p class="mb1">And another thing :)  You can sell carbon credits made from the production of biochar, so it literally is self funding.  Who needs a green economy anyway.  
+                </p>
+                <p class="mb1">
                 Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires. It’s
                 not a magic
                 bullet, but it’s a practical, scalable, and proven tool we can start using today.
