--- a/biochar.html
+++ b/biochar.html
@@ -2535,9 +2535,7 @@ limitations under the License.
             <p class="mb1">And another thing :)  You can sell carbon credits made from the production of biochar, so it literally is self funding.  Who needs a green economy anyway.  
                 </p>
                 <p class="mb1">
-                Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires. It’s
-                not a magic
-                bullet, but it’s a practical, scalable, and proven tool we can start using today.
+                Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires. Biochar is a practical, scalable, and proven tool we can start using today, so lets make a plan for a plan for a plan for a plan for a plan for a plan sometime in early 2050!  Did I mention biochar is ANCIENT?  Like the first fire made some biochar.  Literally.  All we have to do is be neanderthals again, that tracks.  
             </p>
             <p class="mb1">
                 Join the Solution
@@ -2545,12 +2543,6 @@ limitations under the License.
                 action to fight
                 back? Biochar isn’t just an idea—it’s a movement. Together, we can make it part of the solution.
             </p>
-            <p class="mb1">
-                Learn More About Biochar
-
-                What is biochar?
-                How does it help fight global warming?
-                Ways you can support biochar projects in wildfire-prone areas.</p>
 
             </div>
 
