--- a/biochar.html
+++ b/biochar.html
@@ -25,7 +25,7 @@ limitations under the License.
     <meta name="viewport" content="width=device-width">
     <meta name="amp-google-client-id-api" content="googleanalytics">
     <meta name="google-adsense-account" content="ca-pub-3239465181490887">
-<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
+    <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
     <meta name="description"
         content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
     <meta name="keywords"
@@ -2392,6 +2392,8 @@ limitations under the License.
         <nav class="ampstart-sidebar-nav ampstart-nav">
             <ul class="list-reset m0 p0 ampstart-label">
                 <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="index.html">Home</a></li>
+                <li class="ampstart-nav-item "><a class="ampstart-nav-link"
+                        href="https://minnowspace.vercel.app">Minnowspace</a></li>
             </ul>
         </nav>
 
@@ -2467,26 +2469,27 @@ limitations under the License.
             <p class="mb1 ampstart-dropcap">
             <h2>Wildfires, Global Warming, and a Carbon Solution That Works</h2>
             </p>
-            <p class="mb1"><h3>
+            <p class="mb1">
+            <h3>
                 The Crisis We Can’t Ignore.</h3>
-                The wildfires in Greater Los Angeles, from Malibu to Pacific Palisades, are devastating. Families are
-                evacuating, homes
-                are burning, and entire ecosystems are being reduced to ash. This isn’t an isolated tragedy—it’s part of
-                a global
-                pattern fueled by global warming.
+            The wildfires in Greater Los Angeles, from Malibu to Pacific Palisades, are devastating. Families are
+            evacuating, homes
+            are burning, and entire ecosystems are being reduced to ash. This isn’t an isolated tragedy—it’s part of
+            a global
+            pattern fueled by global warming.
             </p>
-    <amp-youtube data-videoid="DCcoNHzC4HM" layout="responsive" width="480" height="270"></amp-youtube>
+            <amp-youtube data-videoid="DCcoNHzC4HM" layout="responsive" width="480" height="270"></amp-youtube>
             <p class="mb1">
                 <i>Let’s be clear: rising temperatures are making wildfires more frequent, more intense, and more
-                destructive.</i> The science
+                    destructive.</i> The science
                 is undeniable, and the time for action is now. While we can’t bring back what’s been lost, we can work
                 toward a future
                 where wildfires are less devastating, and the carbon driving this crisis is removed from the
                 atmosphere—for good.
             </p>
             <p class="mb1">
-                <h3>Biochar: A Proven, Scalable Solution</h3>
-                There’s a way to fight back, and it starts with something ancient, simple, and powerful: biochar.
+            <h3>Biochar: A Proven, Scalable Solution</h3>
+            There’s a way to fight back, and it starts with something ancient, simple, and powerful: biochar.
             </p>
             <p class="mb1">
                 Biochar is a carbon-negative material made by heating organic matter (like dead plants and brush) in the
@@ -2494,48 +2497,63 @@ limitations under the License.
                 oxygen. It’s a process called pyrolysis, and it does three critical things:
             </p>
             <p class="mb1">
-                <h3>Neutralizes wildfire fuel:</h3> Turning dry brush into biochar removes the tinder that fuels wildfires.
-                Sequesters carbon: Instead of releasing carbon dioxide into the atmosphere, biochar locks it into a
-                stable, solid form
-                that stays in the ground for centuries.</p>
-                <p class="mb1">
-                <h3>
-                Strengthens ecosystems:</h3> Mixed into soil, biochar improves water retention, supports healthy plants, and
-                helps landscapes
-                recover faster from fire damage.</p>
-                <p class="mb1">
-                <h3>
-               Sequesters Carbon</h3>
-                Biochar offers a way to put carbon
-                back where it
-                belongs—in the ground, not in the atmosphere. When we sequester carbon using biochar, we’re not just
-                slowing the
-                problem; we’re actively reversing it. The carbon stays in the soil for over a hundred years.  Why are we sitting on this?  It's almost free to make, plus you can capture the hydrogen in plants (plants are like 20 percent hydrogen by weight).  
+            <h3>Neutralizes wildfire fuel:</h3> Turning dry brush into biochar removes the tinder that fuels wildfires.
+            Sequesters carbon: Instead of releasing carbon dioxide into the atmosphere, biochar locks it into a
+            stable, solid form
+            that stays in the ground for centuries.</p>
+            <p class="mb1">
+            <h3>
+                Strengthens ecosystems:</h3> Mixed into soil, biochar improves water retention, supports healthy plants,
+            and
+            helps landscapes
+            recover faster from fire damage.</p>
+            <p class="mb1">
+            <h3>
+                Sequesters Carbon</h3>
+            Biochar offers a way to put carbon
+            back where it
+            belongs—in the ground, not in the atmosphere. When we sequester carbon using biochar, we’re not just
+            slowing the
+            problem; we’re actively reversing it. The carbon stays in the soil for over a hundred years. Why are we
+            sitting on this? It's almost free to make, plus you can capture the hydrogen in plants (plants are like 20
+            percent hydrogen by weight).
             </p>
             <p class="mb1">
-                <h3>Imagine this:</h3>
+            <h3>Imagine this:</h3>
 
-                Carbon from burned or cleared plants doesn’t become CO₂ in the air (even letting plants naturally decompose releases that carbon into the air, thanks bugs..but biochar LOCKS it for the rest of our lives).
-                That carbon, now in the form of biochar, enriches soil and helps plants grow stronger.
-                Healthier plants absorb even more carbon from the atmosphere, creating a virtuous cycle of regeneration.</p>
-                <p class="mb1">
-                <h3>
+            Carbon from burned or cleared plants doesn’t become CO₂ in the air (even letting plants naturally decompose
+            releases that carbon into the air, thanks bugs..but biochar LOCKS it for the rest of our lives).
+            That carbon, now in the form of biochar, enriches soil and helps plants grow stronger.
+            Healthier plants absorb even more carbon from the atmosphere, creating a virtuous cycle of regeneration.</p>
+            <p class="mb1">
+            <h3>
                 Taking a Stand: The Grown-Ups in the Room</h3>
-                For decades, oil companies, climate deniers, and profit-driven narratives have stalled meaningful
-                action. But let’s be
-                real: wildfires don’t care about politics, and neither does carbon in the atmosphere.  Let’s call it what it is: global warming. The heat is on, literally.
+            For decades, oil companies, climate deniers, and profit-driven narratives have stalled meaningful
+            action. But let’s be
+            real: wildfires don’t care about politics, and neither does carbon in the atmosphere. Let’s call it what it
+            is: global warming. The heat is on, literally.
             </p>
-                                        <a rel="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
-                                            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
+            <a rel="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
+                <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt=""
+                    border="0" /></a>
             <p class="mb1">
                 It’s time for the grown-ups to step up. This isn’t about dreaming of oil profits or debating
                 terminology. It’s about
-                survival—and solutions that work.  Oil companies and the media and politicians they own always campaign against anything eco science because it threatens their existence.  I say lets call a truce, me making biochar literally doesn't hurt your oil burning fantasies.  Do it, see if I care,  but don't @ me when I want to make biochar.  Leave biochar alone.  Don't think I haven't noticed my comment section here on X over the last 15 years.  
+                survival—and solutions that work. Oil companies and the media and politicians they own always campaign
+                against anything eco science because it threatens their existence. I say lets call a truce, me making
+                biochar literally doesn't hurt your oil burning fantasies. Do it, see if I care, but don't @ me when I
+                want to make biochar. Leave biochar alone. Don't think I haven't noticed my comment section here on X
+                over the last 15 years.
             </p>
-            <p class="mb1">And another thing :)  You can sell carbon credits made from the production of biochar, so it literally is self funding.  Who needs a green economy anyway.  
-                </p>
-                <p class="mb1">
-                Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires. Biochar is a practical, scalable, and proven tool we can start using today, so lets make a plan for a plan for a plan for a plan for a plan for a plan sometime in early 2050!  Did I mention biochar is ANCIENT?  Like the first fire made some biochar.  Literally.  All we have to do is be neanderthals again, that tracks.  
+            <p class="mb1">And another thing :) You can sell carbon credits made from the production of biochar, so it
+                literally is self funding. Who needs a green economy anyway.
+            </p>
+            <p class="mb1">
+                Biochar can help turn the tide on global warming while reducing the risk of catastrophic wildfires.
+                Biochar is a practical, scalable, and proven tool we can start using today, so lets make a plan for a
+                plan for a plan for a plan for a plan for a plan sometime in early 2050! Did I mention biochar is
+                ANCIENT? Like the first fire made some biochar. Literally. All we have to do is be neanderthals again,
+                that tracks.
             </p>
             <p class="mb1">
                 Join the Solution
