--- a/biochar.html
+++ b/biochar.html
@@ -1482,7 +1482,7 @@ limitations under the License.
         }
 
         body {
-            background: #000;
+            background: #480000;
             color: #fff;
             font-family: Lora, serif;
             min-width: 315px;
@@ -2440,8 +2440,8 @@ limitations under the License.
 
         <!-- Start Fullpage Hero -->
         <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-            <amp-img width="10" height="6.67" alt="Welcome to Beck &amp; Galo Modern American Cuisine"
-                layout="responsive" src="./img/tea/pexels-minan1398-1624554.webp" media="(max-width: 415px)"></amp-img>
+            <amp-img width="10" height="6.67" alt="Welcome to Minnowspace" layout="responsive"
+                src="./img/tea/pexels-minan1398-1624554.webp" media="(max-width: 415px)"></amp-img>
             <amp-img height="420" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
                 src="./img/biochar/Biochar_pile.jpg" media="(min-width: 416px)"></amp-img>
             <figcaption class="absolute top-0 right-0 bottom-0 left-0">
@@ -2449,7 +2449,7 @@ limitations under the License.
                     <h1 class="ampstart-fullpage-hero-heading mb3">
                         <span class="ampstart-fullpage-hero-heading-text">
                             <span class="h6 block caps" style="color:black"></span><span class="h1 block bold caps my1"
-                                style="color:rgb(255, 255, 255)">Biochar </span><span class="h6 block caps" style="background-color: #000; color:
+                                style="color:rgb(255, 255, 255)">Biochar </span><span class="h6 block caps" style="background-color: #440202; color:
                                 rgb(255, 255, 255)">The Ancient Solution We Needed Yesterday.</span>
                         </span>
                     </h1>
