--- a/biochar.html
+++ b/biochar.html
@@ -76,6 +76,13 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-story" src="https://cdn.ampproject.org/v0/amp-story-1.0.js"></script>
+
+  <meta name="amp-google-client-id-api" content="googleanalytics">
+  <meta name="google-adsense-account" content="ca-pub-3239465181490887">
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  
+  
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
   <style amp-custom>
     amp-story {
@@ -133,6 +140,32 @@
 </head>
 
 <body>
+    <!-- Cover page -->
+    <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
+      <script id="hello-world" type="text/plain" target="amp-script">
+             window.dataLayer = window.dataLayer || [];
+                function gtag() { dataLayer.push(arguments); }
+                gtag('js', new Date());
+          
+                gtag('config', 'G-V3TNNSX3H4');
+          </script>
+    </amp-script>
+    <!--maybe delete above-->
+    <amp-analytics type="gtag" data-credentials="include">
+      <script type="application/json">
+              {
+              "vars" : { 
+                  "gtag_id": "G-V3TNNSX3H4", 
+                  "config": { 
+                      "G-V3TNNSX3H4": { 
+                            "groups": "default" 
+                            }
+                                            }
+                    }
+                } 
+           </script>
+    </amp-analytics>
+  
   <!-- Cover page -->
   <amp-story standalone title="Biochar: A Climate Solution" publisher="AMP tutorials"
      poster-portrait-src="https://media.istockphoto.com/id/1310122102/photo/biochar-in-a-black-bowl.jpg?s=612x612&w=0&k=20&c=s5EXbB1e-9-YS-A1i_i3cZg-2q-f-a-Y2C-W-Z7X_w=">
