--- a/biochar.html
+++ b/biochar.html
@@ -81,8 +81,8 @@
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  
-  
+
+
   <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400" rel="stylesheet">
   <style amp-custom>
     amp-story {
@@ -140,19 +140,19 @@
 </head>
 
 <body>
-    <!-- Cover page -->
-    <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
-      <script id="hello-world" type="text/plain" target="amp-script">
+  <!-- Cover page -->
+  <amp-script src="https://www.googletagmanager.com/gtag/js?id=G-V3TNNSX3H4" width="300" height="10">
+    <script id="hello-world" type="text/plain" target="amp-script">
              window.dataLayer = window.dataLayer || [];
                 function gtag() { dataLayer.push(arguments); }
                 gtag('js', new Date());
           
                 gtag('config', 'G-V3TNNSX3H4');
           </script>
-    </amp-script>
-    <!--maybe delete above-->
-    <amp-analytics type="gtag" data-credentials="include">
-      <script type="application/json">
+  </amp-script>
+  <!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
               {
               "vars" : { 
                   "gtag_id": "G-V3TNNSX3H4", 
@@ -164,11 +164,11 @@
                     }
                 } 
            </script>
-    </amp-analytics>
-  
+  </amp-analytics>
+
   <!-- Cover page -->
-  <amp-story standalone title="Biochar: A Climate Solution" publisher="AMP tutorials"
-     poster-portrait-src="https://media.istockphoto.com/id/1310122102/photo/biochar-in-a-black-bowl.jpg?s=612x612&w=0&k=20&c=s5EXbB1e-9-YS-A1i_i3cZg-2q-f-a-Y2C-W-Z7X_w=">
+  <amp-story standalone supports-landscape title="Biochar: A Climate Solution" publisher="AMP tutorials"
+    poster-portrait-src="https://media.istockphoto.com/id/1310122102/photo/biochar-in-a-black-bowl.jpg?s=612x612&w=0&k=20&c=s5EXbB1e-9-YS-A1i_i3cZg-2q-f-a-Y2C-W-Z7X_w=">
     <amp-story-page id="cover">
       <amp-story-grid-layer template="vertical" class="bottom">
         <amp-img src="assets/biochar2.jpeg" width="275" height="183" layout="responsive">
@@ -188,7 +188,8 @@
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
         <h1>What is Biochar?</h1>
-        <p style="background-color: #000;">Biochar is a charcoal-like substance that's made by burning organic material from agricultural and forestry wastes (biomass) in a controlled process called pyrolysis.</p>
+        <p style="background-color: #000;">Biochar is a charcoal-like substance that's made by burning organic material
+          from agricultural and forestry wastes (biomass) in a controlled process called pyrolysis.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -199,7 +200,8 @@
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: #000;"> Biochar can store carbon in the soil for hundreds or even thousands of years. This process is called carbon sequestration.</p>
+        <p style="background-color: #000;"> Biochar can store carbon in the soil for hundreds or even thousands of
+          years. This process is called carbon sequestration.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -210,18 +212,21 @@
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color:darkcyan">Biochar production is a great way to reduce waste. It uses leftover materials from farming and forestry that would otherwise be burned or decompose, releasing carbon into the atmosphere.</p>
+        <p style="background-color:darkcyan">Biochar production is a great way to reduce waste. It uses leftover
+          materials from farming and forestry that would otherwise be burned or decompose, releasing carbon into the
+          atmosphere.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Page 5: Hydrogen Byproduct -->
     <amp-story-page id="page5">
-      <amp-story-grid-layer template="vertical" >
+      <amp-story-grid-layer template="vertical">
         <amp-img src="assets/gas.jpeg" width="318" height="159" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p>The pyrolysis process used to create biochar also produces a synthesis gas, or syngas, which is rich in hydrogen. This hydrogen can be used as a clean fuel source.</p>
+        <p>The pyrolysis process used to create biochar also produces a synthesis gas, or syngas, which is rich in
+          hydrogen. This hydrogen can be used as a clean fuel source.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -232,7 +237,8 @@
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: #000;">Biochar can be "activated" to create activated carbon, a material with a huge surface area that's great for filtering water and air.</p>
+        <p style="background-color: #000;">Biochar can be "activated" to create activated carbon, a material with a huge
+          surface area that's great for filtering water and air.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
@@ -243,18 +249,20 @@
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: #000;">Adding biochar to soil can improve its fertility and water retention, leading to healthier plants and higher crop yields.</p>
+        <p style="background-color: #000;">Adding biochar to soil can improve its fertility and water retention, leading
+          to healthier plants and higher crop yields.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
     <!-- Page 8: Call to Action -->
     <amp-story-page id="page8">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar.jpeg"" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/biochar.jpeg"" width=" 720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
-        <p style="background-color: #000;">Biochar is a powerful tool in the fight against climate change. Support the development and use of this amazing technology.</p>
+        <p style="background-color: #000;">Biochar is a powerful tool in the fight against climate change. Support the
+          development and use of this amazing technology.</p>
       </amp-story-grid-layer>
     </amp-story-page>
 
