--- a/biochar.html
+++ b/biochar.html
@@ -143,11 +143,11 @@
 <body>
   <!-- Cover page -->
   <amp-story standalone supports-landscape title="Biochar: A Climate Solution" publisher="Minnow News Network"
-    publisher-logo-src="img/fish.png" poster-portrait-src="assets/biochar.jpeg">
+    publisher-logo-src="img/fish.webp" poster-portrait-src="assets/biochar.webp">
     <amp-story-auto-analytics gtag-id="G-V3TNNSX3H4"></amp-story-auto-analytics>
     <amp-story-page id="cover">
       <amp-story-grid-layer template="vertical" class="bottom">
-        <amp-img src="assets/biochar2.jpeg" width="275" height="183" layout="responsive">
+        <amp-img src="assets/biochar2.webp" width="275" height="183" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="top">
@@ -159,7 +159,7 @@
     <!-- Page 2: What is Biochar? -->
     <amp-story-page id="page2">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar.jpeg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/biochar.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -172,7 +172,7 @@
     <!-- Page 3: Carbon Sequestration -->
     <amp-story-page id="page3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar4.jpeg" width="283" height="178" layout="responsive">
+        <amp-img src="assets/biochar4.webp" width="283" height="178" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -184,7 +184,7 @@
     <!-- Page 4: Waste Reduction -->
     <amp-story-page id="page4">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar3.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/biochar3.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -197,7 +197,7 @@
     <!-- Page 5: Hydrogen Byproduct -->
     <amp-story-page id="page5">
       <amp-story-grid-layer template="vertical">
-        <amp-img src="assets/gas.jpeg" width="318" height="159" layout="responsive">
+        <amp-img src="assets/gas.webp" width="318" height="159" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -209,7 +209,7 @@
     <!-- Page 6: Activated Carbon -->
     <amp-story-page id="page6">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar5.jpeg" width="268" height="188" layout="responsive">
+        <amp-img src="assets/biochar5.webp" width="268" height="188" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -221,7 +221,7 @@
     <!-- Page 7: Benefits for Agriculture -->
     <amp-story-page id="page7">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar6.jpeg" width="275" height="183" layout="responsive">
+        <amp-img src="assets/biochar6.webp" width="275" height="183" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
@@ -233,7 +233,7 @@
     <!-- Page 8: Call to Action -->
     <amp-story-page id="page8">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/biochar.jpeg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/biochar.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical" class="bottom">
