--- a/biochar-article.html
+++ b/biochar-article.html
@@ -6,11 +6,10 @@
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
-  <meta name="amp-consent-blocking" content="amp-ad">
+
+
   <meta name="amp-google-client-id-api" content="googleanalytics" />
-  <meta name="description"
-    content="Biochar: The Black Gold for Your Garden and the Planet - Minnow News">
+  <meta name="description" content="Biochar: The Black Gold for Your Garden and the Planet - Minnow News">
   <meta name="author" content="MINNOWSPACE">
   <link rel="canonical" href="https://minnowspace.com/biochar-article.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -90,6 +89,7 @@
       background-color: #f0f2f5;
       margin: 0;
     }
+
     .header {
       background-color: #ffffff;
       padding: 1rem 5%;
@@ -97,8 +97,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     .header h1 {
       font-size: 1.8rem;
       color: #000;
@@ -106,9 +107,11 @@
       font-weight: 700;
       letter-spacing: -1px;
     }
+
     .header h1 span {
       color: #1877f2;
     }
+
     .nav a {
       margin: 0 10px;
       color: #1877f2;
@@ -116,60 +119,55 @@
       font-size: 1rem;
       font-weight: 500;
     }
+
     .nav a:hover {
       text-decoration: underline;
     }
+
     main {
       padding: 2rem 5%;
       max-width: 800px;
       margin: 20px auto;
       background-color: #ffffff;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
+
     article h2 {
       color: #000;
       border-bottom: 2px solid #dddfe2;
       padding-bottom: 10px;
     }
+
     article p {
       font-size: 1.1rem;
       margin-bottom: 1.5rem;
     }
+
     article h3 {
-        color: #333;
+      color: #333;
     }
+
     a {
       color: #1877f2;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .article-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 1rem;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 
 <body>
-  <amp-consent id="ConsentManager" layout="nodisplay" type="ConsentManager">
-    <script type="application/json">
-        {
-          "postPromptUI": "postPromptUI",
-          "clientConfig": {
-            "cdid": "539b9d9f016c1",
-            "params": ""
-          }
-        }
-      </script>
-    <div id="postPromptUI">
-      <button on="tap:ConsentManager.prompt()" role="button">Manage privacy settings</button>
-    </div>
-  </amp-consent>
+
   <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
           {
@@ -191,7 +189,9 @@
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
   <header class="header">
-    <a href="index.html" style="text-decoration: none;"><h1>Minnow<span>News</span></h1></a>
+    <a href="index.html" style="text-decoration: none;">
+      <h1>Minnow<span>News</span></h1>
+    </a>
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -201,28 +201,54 @@
   </header>
   <main>
     <article>
-        <h2>Biochar: The Black Gold Revolutionizing Gardens and Fighting Climate Change</h2>
+      <h2>Biochar: The Black Gold Revolutionizing Gardens and Fighting Climate Change</h2>
 
-        <p>In the quest for sustainable solutions to modern agriculture's and climate change's biggest challenges, sometimes the answer lies buried in ancient practices. Enter biochar, a charcoal-like substance that is rapidly gaining recognition as a powerful tool for enriching soil, reducing waste, and sequestering carbon from the atmosphere.</p>
+      <p>In the quest for sustainable solutions to modern agriculture's and climate change's biggest challenges,
+        sometimes the answer lies buried in ancient practices. Enter biochar, a charcoal-like substance that is rapidly
+        gaining recognition as a powerful tool for enriching soil, reducing waste, and sequestering carbon from the
+        atmosphere.</p>
 
-        <amp-img src="assets/biochar2.webp" alt="A pile of biochar" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
+      <amp-img src="assets/biochar2.webp" alt="A pile of biochar" class="article-image" width="1024" height="683"
+        layout="responsive"></amp-img>
 
-        <h3>What Exactly is Biochar?</h3>
-        <p>Biochar is the product of a process called pyrolysis. It involves heating organic materials—such as wood chips, crop residue, and manure—in a low-oxygen or oxygen-free environment. Unlike simple burning, which releases most carbon into the air as carbon dioxide, pyrolysis locks the carbon into a stable, solid form. The result is a black, highly porous material that looks a lot like common charcoal but is produced with the specific intention of being added to soil.</p>
+      <h3>What Exactly is Biochar?</h3>
+      <p>Biochar is the product of a process called pyrolysis. It involves heating organic materials—such as wood chips,
+        crop residue, and manure—in a low-oxygen or oxygen-free environment. Unlike simple burning, which releases most
+        carbon into the air as carbon dioxide, pyrolysis locks the carbon into a stable, solid form. The result is a
+        black, highly porous material that looks a lot like common charcoal but is produced with the specific intention
+        of being added to soil.</p>
 
-        <h3>A Powerful Tool for Carbon Sequestration</h3>
-        <p>One of the most exciting aspects of biochar is its ability to act as a carbon sink. When plants grow, they absorb carbon dioxide from the atmosphere. When they die and decompose, this carbon is released back into the air. By converting this organic waste into biochar and burying it, we effectively trap that carbon in the ground. Scientific studies have shown that biochar can remain stable in the soil for hundreds, or even thousands, of years. This makes it a significant and long-term method of carbon sequestration, actively removing greenhouse gases from the atmosphere.</p>
+      <h3>A Powerful Tool for Carbon Sequestration</h3>
+      <p>One of the most exciting aspects of biochar is its ability to act as a carbon sink. When plants grow, they
+        absorb carbon dioxide from the atmosphere. When they die and decompose, this carbon is released back into the
+        air. By converting this organic waste into biochar and burying it, we effectively trap that carbon in the
+        ground. Scientific studies have shown that biochar can remain stable in the soil for hundreds, or even
+        thousands, of years. This makes it a significant and long-term method of carbon sequestration, actively removing
+        greenhouse gases from the atmosphere.</p>
 
-        <amp-img src="assets/biochar4.webp" alt="Diagram showing carbon sequestration" class="article-image" width="1024" height="683" layout="responsive"></amp-img>
+      <amp-img src="assets/biochar4.webp" alt="Diagram showing carbon sequestration" class="article-image" width="1024"
+        height="683" layout="responsive"></amp-img>
 
-        <h3>From Waste Product to Wonder Material</h3>
-        <p>Modern agriculture and forestry generate enormous amounts of waste that often goes unused. Pyrolysis provides a productive and environmentally friendly way to manage this waste. Instead of letting it decompose or burning it in open fields—practices that release CO2 and other pollutants—we can convert it into valuable biochar. As a bonus, the pyrolysis process itself can be a source of clean energy, as it produces a hydrogen-rich synthesis gas (syngas) that can be captured and used as fuel.</p>
+      <h3>From Waste Product to Wonder Material</h3>
+      <p>Modern agriculture and forestry generate enormous amounts of waste that often goes unused. Pyrolysis provides a
+        productive and environmentally friendly way to manage this waste. Instead of letting it decompose or burning it
+        in open fields—practices that release CO2 and other pollutants—we can convert it into valuable biochar. As a
+        bonus, the pyrolysis process itself can be a source of clean energy, as it produces a hydrogen-rich synthesis
+        gas (syngas) that can be captured and used as fuel.</p>
 
-        <h3>Transforming Soil Health and Fertility</h3>
-        <p>Beyond its climate benefits, biochar is a game-changer for agriculture. Its extremely porous structure acts like a sponge, dramatically improving the water retention of soil. This means less water is needed for irrigation, making it invaluable in drought-prone areas. These pores also provide a perfect habitat for beneficial soil microbes, which are essential for nutrient cycling and plant health. By improving soil structure, aeration, and nutrient retention, biochar can lead to healthier plants, higher crop yields, and a reduced need for chemical fertilizers.</p>
+      <h3>Transforming Soil Health and Fertility</h3>
+      <p>Beyond its climate benefits, biochar is a game-changer for agriculture. Its extremely porous structure acts
+        like a sponge, dramatically improving the water retention of soil. This means less water is needed for
+        irrigation, making it invaluable in drought-prone areas. These pores also provide a perfect habitat for
+        beneficial soil microbes, which are essential for nutrient cycling and plant health. By improving soil
+        structure, aeration, and nutrient retention, biochar can lead to healthier plants, higher crop yields, and a
+        reduced need for chemical fertilizers.</p>
 
-        <h3>A Sustainable Future</h3>
-        <p>Biochar is more than just a soil amendment; it's a multifaceted technology that addresses waste reduction, energy production, and carbon sequestration. As we continue to seek innovative ways to build a more sustainable world, the ancient wisdom behind biochar offers a promising path forward. Supporting its development and adoption is a step towards a healthier planet and a more resilient agricultural system.</p>
+      <h3>A Sustainable Future</h3>
+      <p>Biochar is more than just a soil amendment; it's a multifaceted technology that addresses waste reduction,
+        energy production, and carbon sequestration. As we continue to seek innovative ways to build a more sustainable
+        world, the ancient wisdom behind biochar offers a promising path forward. Supporting its development and
+        adoption is a step towards a healthier planet and a more resilient agricultural system.</p>
     </article>
   </main>
 </body>
