biochar failed amp cause of photos so i re did a photo and added a tiktok

--- a/biochar-article.html
+++ b/biochar-article.html
@@ -7,7 +7,7 @@
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
-
+  <script async custom-element="amp-tiktok" src="https://cdn.ampproject.org/v0/amp-tiktok-0.1.js"></script>
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description" content="Biochar: The Black Gold for Your Garden and the Planet - Minnow News">
   <meta name="author" content="MINNOWSPACE">
@@ -202,14 +202,17 @@
   <main>
     <article>
       <h2>Biochar: The Black Gold Revolutionizing Gardens and Fighting Climate Change</h2>
+      
 
       <p>In the quest for sustainable solutions to modern agriculture's and climate change's biggest challenges,
         sometimes the answer lies buried in ancient practices. Enter biochar, a charcoal-like substance that is rapidly
         gaining recognition as a powerful tool for enriching soil, reducing waste, and sequestering carbon from the
         atmosphere.</p>
+        <div class="tiktok-container">
+          <amp-tiktok width="325" height="575"
+            data-src="https://www.tiktok.com/@calebcomplains/video/7216005138291674414"></amp-tiktok>
+        </div>
 
-      <amp-img src="assets/biochar2.webp" alt="A pile of biochar" class="article-image" width="1024" height="683"
-        layout="responsive"></amp-img>
 
       <h3>What Exactly is Biochar?</h3>
       <p>Biochar is the product of a process called pyrolysis. It involves heating organic materials—such as wood chips,
@@ -226,8 +229,8 @@
         thousands, of years. This makes it a significant and long-term method of carbon sequestration, actively removing
         greenhouse gases from the atmosphere.</p>
 
-      <amp-img src="assets/biochar4.webp" alt="Diagram showing carbon sequestration" class="article-image" width="1024"
-        height="683" layout="responsive"></amp-img>
+    <amp-img src="assets/biochar11.webp" alt="A pile of biochar" class="article-image" width="375" height="250"
+      layout="responsive"></amp-img>
 
       <h3>From Waste Product to Wonder Material</h3>
       <p>Modern agriculture and forestry generate enormous amounts of waste that often goes unused. Pyrolysis provides a
